# monado

./: .editorconfig  .gitlab-ci.yml  CMakeLists.txt  CompilerFlags.cmake  README.md  build.gradle  flake.nix
.gitlab-ci/: config.yml  install-arch-additional-deps.sh  install-cross.sh
.reuse/: dep5
debian/: .gitignore  NEWS  README.Debian  README.source  changelog  clean  control  copyright  copyright-scan-patterns.yml  fill.copyright.blanks.yml  fix.scanned.copyright  gbp.conf  libopenxr1-monado.dirs  libopenxr1-monado.docs  libopenxr1-monado.install  libopenxr1-monado.lintian-overrides  libopenxr1-monado.postinst  libopenxr1-monado.prerm  monado-cli.1  monado-cli.install  monado-cli.manpages  monado-ctl.1  monado-gui.1  monado-gui.install  monado-gui.manpages  monado-service.1  monado-service.install  monado-service.manpages  org.freedesktop.monado.openxr1.metainfo.xml  rules  watch
debian/extra/: prepare-commit-package.sh  register-dpkg-mergechangelogs.sh
debian/patches/: 0003-Update-catch2-to-2.13.7.patch  series
debian/tests/: cli-probe  cli-test  control
debian/upstream/: metadata
doc/changes/auxiliary/: mr.2138.md  mr.2139.md  mr.2140.md
doc/changes/big/: mr.1620.md
doc/changes/compositor/: mr.2004.md  mr.2086.md
doc/changes/drivers/: mr.2145.md  mr.2158.md
doc/changes/ipc/: mr.2138.md
doc/changes/misc_features/: mr.2004.md  mr.2140.md  mr.2156.md  mr.2224.md
doc/changes/state_trackers/: mr.2087.md  mr.2119.md  mr.2129.md
doc/changes/xrt/: mr.1905.md  mr.2051.2.md
doc/drivers/: nolo-driver.md
doc/example_configs/: autorun_v0.example.json  autorun_v0.schema.json  autorun_v0.schema.json.license
doc/images/: nolo_usb_packet_diagram.license
scripts/: generate_oxr_ext_support.py  generate_vk_helpers.py  mapping.imp  run_iwyu.sh
src/xrt/: .clang-format
src/xrt/auxiliary/android/: CMakeLists.txt  (+18 more)
src/xrt/compositor/: CMakeLists.txt
src/xrt/drivers/: CMakeLists.txt
src/xrt/include/: CMakeLists.txt
src/xrt/include/xrt/: xrt_android.h  xrt_compositor.h  xrt_config_build.h.cmake_in  xrt_config_have.h.cmake_in  xrt_defines.h  xrt_device.h  xrt_gfx_native.h  xrt_handles.h  xrt_instance.h  xrt_limits.h  xrt_openxr_includes.h  xrt_plane_detector.h  xrt_results.h  xrt_space.h  xrt_system.h  xrt_tracking.h
src/xrt/include/xrt/interfaces/: device.h
src/xrt/ipc/: CMakeLists.txt
src/xrt/targets/: CMakeLists.txt
src/xrt/targets/ctl/: CMakeLists.txt  gui_eel.py  main.c  monado-ctl-gui.c  monado-ctl-gui.h
src/xrt/targets/ctl/eel_web/: gui_eel.html
src/xrt/targets/sdl_test/: CMakeLists.txt  sdl_compositor.c  sdl_device.c  sdl_instance.c  sdl_internal.h  sdl_internal.hpp  sdl_program.cpp  sdl_swapchain.c
tests/: CMakeLists.txt  aux_d3d_dxgi_formats.hpp  tests_android_surface_callbacks.cpp  tests_comp_client_vulkan.cpp  tests_cxx_wrappers.cpp  vktest_init_bundle.hpp
(+251 files in other folders)
